// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorWebsitesAction renders only a url 1`] = `
<UserActionWrapper>
  <LinkWithTargetBlank
    as="a"
    href="www.descriptionless.com/url"
  >
    <Tooltip
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      title="Author websites"
    >
      <ForwardRef(LinkOutlined) />
    </Tooltip>
  </LinkWithTargetBlank>
</UserActionWrapper>
`;

exports[`AuthorWebsitesAction renders only blog 1`] = `
<UserActionWrapper>
  <LinkWithTargetBlank
    as="a"
    href="https://author.wordpress.com"
  >
    <Tooltip
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      title="Author websites"
    >
      <ForwardRef(LinkOutlined) />
    </Tooltip>
  </LinkWithTargetBlank>
</UserActionWrapper>
`;

exports[`AuthorWebsitesAction renders with a blog and urls in a dropdown 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef(InternalButton)>
        <ForwardRef
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title="Author websites"
        >
          <ForwardRef(LinkOutlined) />
        </ForwardRef>
      </ForwardRef(InternalButton)>
    }
  >
    <MenuItem
      key="https://author.wordpress.com"
    >
      <LinkWithTargetBlank
        as="a"
        href="https://author.wordpress.com"
      >
        Blog
      </LinkWithTargetBlank>
    </MenuItem>
    <MenuItem
      key="https://www.whatever.com/author"
    >
      <LinkWithTargetBlank
        as="a"
        href="https://www.whatever.com/author"
      >
        whatever.com/author
      </LinkWithTargetBlank>
    </MenuItem>
    <MenuItem
      key="www.descriptionless.com/url"
    >
      <LinkWithTargetBlank
        as="a"
        href="www.descriptionless.com/url"
      >
        descriptionless.com/url
      </LinkWithTargetBlank>
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;
